--- a/CuckooChessAPK/res/layout/main.xml
+++ b/CuckooChessAPK/res/layout/main.xml
@@ -5,8 +5,9 @@
     android:layout_height="fill_parent"
     >
 <TextView  
+    android:id="@+id/textview"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:text="@string/hello" android:includeFontPadding="true"
+    android:typeface="monospace" android:textSize="10dip"/>
 </LinearLayout>
