More work on the android UI. Doesn't currently work. Probably needs a smaller hash table.

--- a/CuckooChessAPK/res/layout/main.xml
+++ b/CuckooChessAPK/res/layout/main.xml
@@ -7,7 +7,9 @@
 <EditText
 	android:id="@+id/cmd"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content" android:maxLines="1"/>
+	android:layout_height="wrap_content"
+	android:maxLines="1"
+    android:typeface="monospace" android:textSize="10dip"/>	
 <TextView  
     android:id="@+id/textview"
     android:layout_width="fill_parent" 
