Made the move list scroll on Android when needed.

--- a/CuckooChessAPK/res/layout/main.xml
+++ b/CuckooChessAPK/res/layout/main.xml
@@ -16,8 +16,21 @@
     android:includeFontPadding="true"
     android:typeface="monospace"
     android:textSize="10dip"/>
-<TextView
+<ScrollView
+	android:id="@+id/scrollView"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:layout_weight="1">
+	<TextView
     android:id="@+id/moveList"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:includeFontPadding="true"
+    android:typeface="monospace"
+    android:textSize="10dip"/>
+</ScrollView>
+<TextView
+    android:id="@+id/thinking"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:includeFontPadding="true"
