--- a/CuckooChessAPK/res/layout-land/main.xml
+++ b/CuckooChessAPK/res/layout-land/main.xml
@@ -14,14 +14,18 @@
     	android:orientation="vertical"
 	    android:layout_width="fill_parent"
     	android:layout_height="fill_parent">
-
-		<TextView
-		    android:id="@+id/status"
-		    android:layout_width="fill_parent" 
-		    android:layout_height="wrap_content" 
-		    android:includeFontPadding="true"
-		    android:typeface="monospace"
-		    android:textSize="10dip"/>
+	<TextView
+	    android:id="@+id/status"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:includeFontPadding="true"
+	    android:typeface="monospace"
+	    android:textSize="10dip"/>
+	<ScrollView
+		android:id="@+id/scrollView"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="1">
 		<TextView
 		    android:id="@+id/moveList"
 		    android:layout_width="fill_parent" 
@@ -29,5 +33,13 @@
 		    android:includeFontPadding="true"
 		    android:typeface="monospace"
 		    android:textSize="10dip"/>
+   	</ScrollView>
+	<TextView
+	    android:id="@+id/thinking"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:includeFontPadding="true"
+	    android:typeface="monospace"
+	    android:textSize="10dip"/>
 	</LinearLayout>
 </LinearLayout>
