--- a/CuckooChessAPK/res/xml/preferences.xml
+++ b/CuckooChessAPK/res/xml/preferences.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
-
-<CheckBoxPreference android:title="Play White" android:key="playerWhite" android:defaultValue="true"></CheckBoxPreference>
-<CheckBoxPreference android:title="Flip Board" android:key="boardFlipped" android:defaultValue="false"></CheckBoxPreference>
-
-<ListPreference android:summary="Thinking Time" android:key="timeLimit" android:entryValues="@array/thinking_times_values" android:entries="@array/thinking_times_texts"></ListPreference><CheckBoxPreference android:title="Show Computer Thinking" android:key="showThinking" android:defaultValue="false"></CheckBoxPreference>
-
-
+<CheckBoxPreference
+	android:title="Play White"
+	android:key="playerWhite"
+	android:defaultValue="true">
+</CheckBoxPreference>
+<CheckBoxPreference
+	android:title="Flip Board"
+	android:key="boardFlipped"
+	android:defaultValue="false">
+</CheckBoxPreference>
+<ListPreference
+	android:summary="Thinking Time" android:key="timeLimit"
+	android:entryValues="@array/thinking_times_values"
+	android:entries="@array/thinking_times_texts"
+	android:defaultValue="5000">
+</ListPreference>
+<CheckBoxPreference
+	android:title="Show Computer Thinking"
+	android:key="showThinking"
+	android:defaultValue="false">
+</CheckBoxPreference>
 </PreferenceScreen>
