--- a/CuckooChessAPK/res/menu/context_menu.xml
+++ b/CuckooChessAPK/res/menu/context_menu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:id="@+id/item_fen_to_clipboard" android:title="FEN -> Clipboard"></item>
-  <item android:id="@+id/item_clipboard_to_fen" android:title="Clipboard -> FEN"></item>
-  <item android:id="@+id/item_pgn_to_clipboard" android:title="PGN -> Clipboard"></item>
-  <item android:id="@+id/item_clipboard_to_pgn" android:title="Clipboard -> PGN"></item>
+  <item android:id="@+id/item_pgn_to_clipboard" android:title="Copy game"></item>
+  <item android:id="@+id/item_fen_to_clipboard" android:title="Copy position"></item>
+  <item android:id="@+id/item_clipboard_to_fen_pgn" android:title="Paste"></item>
 </menu>
