DroidFish: Implemented analysis mode logic. (The analysis output isn't that nice yet though.)

--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -11,6 +11,11 @@
 	android:key="boardFlipped"
 	android:defaultValue="false">
 </CheckBoxPreference>
+<CheckBoxPreference
+	android:title="Analysis Mode"
+	android:key="analysisMode"
+	android:defaultValue="false">
+</CheckBoxPreference>
 <ListPreference
 	android:title="Thinking Time"
 	android:key="timeLimit"
