--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -32,4 +32,9 @@
 	android:entries="@array/font_size_texts"
 	android:defaultValue="12">
 </ListPreference>
+<CheckBoxPreference
+	android:title="Enable Sounds"
+	android:key="soundEnabled"
+	android:defaultValue="false">
+</CheckBoxPreference>
 </PreferenceScreen>
