--- a/DroidFish/res/layout/main.xml
+++ b/DroidFish/res/layout/main.xml
@@ -2,38 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<view
-	class="org.petero.droidfish.ChessBoard"
-    android:id="@+id/chessboard"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"/>
-<TextView
-    android:id="@+id/status"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:includeFontPadding="true"
-    android:typeface="monospace"
-    android:textSize="10dip"/>
-<ScrollView
-	android:id="@+id/scrollView"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:layout_weight="1">
+    android:layout_height="fill_parent">
+	<view
+		class="org.petero.droidfish.ChessBoard"
+	    android:id="@+id/chessboard"
+    	android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"/>
 	<TextView
-    android:id="@+id/moveList"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:includeFontPadding="true"
-    android:typeface="monospace"
-    android:textSize="10dip"/>
-</ScrollView>
-<TextView
-    android:id="@+id/thinking"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:includeFontPadding="true"
-    android:typeface="monospace"
-    android:textSize="10dip"/>
+    	android:id="@+id/status"
+	    android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content" 
+	    android:includeFontPadding="true"
+    	android:typeface="monospace"
+	    android:textSize="10dip"/>
+	<ScrollView
+		android:id="@+id/scrollView"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="1">
+		<TextView
+    		android:id="@+id/moveList"
+	    	android:layout_width="fill_parent" 
+    		android:layout_height="wrap_content" 
+	    	android:includeFontPadding="true"
+    		android:typeface="monospace"
+		    android:textSize="10dip"/>
+	</ScrollView>
+	<TextView
+    	android:id="@+id/thinking"
+	    android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content" 
+	    android:includeFontPadding="true"
+    	android:typeface="monospace"
+	    android:textSize="10dip"/>
 </LinearLayout>
