--- a/DroidFish/res/layout-land/editboard.xml
+++ b/DroidFish/res/layout-land/editboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <view
-    	class="org.petero.droidfish.ChessBoard"
+    	class="org.petero.droidfish.ChessBoardEdit"
         android:id="@+id/eb_chessboard"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
