--- a/DroidFish/res/layout/editboard.xml
+++ b/DroidFish/res/layout/editboard.xml
@@ -7,6 +7,7 @@
     <view
     	class="org.petero.droidfish.ChessBoardEdit"
         android:id="@+id/eb_chessboard"
+        android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 	<TextView
