DroidFish: Added possibility for human player to claim draw.

--- a/DroidFish/res/menu/options_menu.xml
+++ b/DroidFish/res/menu/options_menu.xml
@@ -2,9 +2,10 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/item_new_game" android:title="New Game"></item>
-  <item android:id="@+id/item_editboard" android:title="Edit Board"></item>
-  <item android:id="@+id/item_settings" android:title="Settings"></item>
-  <item android:id="@+id/item_about" android:title="About"></item>
   <item android:id="@+id/item_undo" android:title="Undo"></item>
   <item android:id="@+id/item_redo" android:title="Redo"></item>
+  <item android:id="@+id/item_editboard" android:title="Edit Board"></item>
+  <item android:id="@+id/item_settings" android:title="Settings"></item>
+  <item android:id="@+id/item_draw" android:title="Claim Draw"></item>
+  <item android:id="@+id/item_about" android:title="About"></item>
 </menu>
