--- a/DroidFish/res/menu/options_menu.xml
+++ b/DroidFish/res/menu/options_menu.xml
@@ -6,6 +6,7 @@
   <item android:id="@+id/item_redo" android:title="Redo"></item>
   <item android:id="@+id/item_editboard" android:title="Edit Board"></item>
   <item android:id="@+id/item_settings" android:title="Settings"></item>
+  <item android:id="@+id/item_goto_move" android:title="Goto Move"></item>
   <item android:id="@+id/item_draw" android:title="Claim Draw"></item>
   <item android:id="@+id/item_about" android:title="About"></item>
 </menu>
