--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -23,7 +23,7 @@
 </CheckBoxPreference>
 <ListPreference
 	android:key="movesPerSession"
-	android:title="Time Control Moves"
+	android:title="Time Control: Moves"
 	android:summary="Number of moves between time controls"
 	android:entryValues="@array/moves_per_session_values"
 	android:entries="@array/moves_per_session_texts"
@@ -31,7 +31,7 @@
 </ListPreference>
 <ListPreference
 	android:key="timeControl"
-	android:title="Time Control"
+	android:title="Time Control: Time"
 	android:summary="Maximum thinking time between time controls"
 	android:entryValues="@array/time_control_values"
 	android:entries="@array/time_control_texts"
@@ -39,7 +39,7 @@
 </ListPreference>
 <ListPreference
 	android:key="timeIncrement"
-	android:title="Time Increment"
+	android:title="Time Control: Increment"
 	android:summary="Extra thinking time for each completed move"
 	android:entryValues="@array/time_increment_values"
 	android:entries="@array/time_increment_texts"
