DroidFish: Made user interface for draw claim/offer/accept a bit more clear.

--- a/DroidFish/res/menu/options_menu.xml
+++ b/DroidFish/res/menu/options_menu.xml
@@ -36,7 +36,7 @@
 	</item>
 	<item
 		android:id="@+id/item_draw"
-		android:title="Claim Draw">
+		android:title="Claim/Offer/Accept Draw">
 	</item>
 	<item
 		android:id="@+id/select_book"
