--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -1,88 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
-<ListPreference
-	android:key="gameMode"
-	android:title="Game Mode"
-	android:summary="Select opponent, analysis mode or computer match"
-	android:entryValues="@array/game_mode_values"
-	android:entries="@array/game_mode_texts"
-	android:defaultValue="1">
-</ListPreference>
-<CheckBoxPreference
-	android:key="boardFlipped"
-	android:title="Flip Board"
-	android:summary="View board from black side"
-	android:defaultValue="false">
-</CheckBoxPreference>
-<CheckBoxPreference
-	android:key="autoSwapSides"
-	android:title="Auto Swap Sides"
-	android:summary="Automatically swap sides when new game started. Also overrides Flip Board setting"
-	android:defaultValue="false">
-</CheckBoxPreference>
-<ListPreference
-	android:key="movesPerSession"
-	android:title="Time Control: Moves"
-	android:summary="Number of moves between time controls"
-	android:entryValues="@array/moves_per_session_values"
-	android:entries="@array/moves_per_session_texts"
-	android:defaultValue="60">
-</ListPreference>
-<ListPreference
-	android:key="timeControl"
-	android:title="Time Control: Time"
-	android:summary="Maximum thinking time between time controls"
-	android:entryValues="@array/time_control_values"
-	android:entries="@array/time_control_texts"
-	android:defaultValue="300000">
-</ListPreference>
-<ListPreference
-	android:key="timeIncrement"
-	android:title="Time Control: Increment"
-	android:summary="Extra thinking time for each completed move"
-	android:entryValues="@array/time_increment_values"
-	android:entries="@array/time_increment_texts"
-	android:defaultValue="0">
-</ListPreference>
-<CheckBoxPreference
-	android:key="showThinking"
-	android:title="Show Computer Thinking"
-	android:summary="Display computer algorithm information during search"
-	android:defaultValue="false">
-</CheckBoxPreference>
-<ListPreference
-	android:key="thinkingArrows"
-	android:title="Thinking Arrows"
-	android:summary="Show thinking with a number of arrows on the chess board"
-	android:entryValues="@array/thinking_arrows_values"
-	android:entries="@array/thinking_arrows_texts"
-	android:defaultValue="2">
-</ListPreference>
-<CheckBoxPreference
-	android:key="bookHints"
-	android:title="Show Book Hints"
-	android:summary="Display opening book move hints for human player"
-	android:defaultValue="false">
-</CheckBoxPreference>
-<ListPreference
-	android:key="fontSize"
-	android:title="Text Size"
-	android:summary="Font size for move list and game information"
-	android:entryValues="@array/font_size_values"
-	android:entries="@array/font_size_texts"
-	android:defaultValue="12">
-</ListPreference>
-<CheckBoxPreference
-	android:key="soundEnabled"
-	android:title="Enable Sounds"
-	android:summary="Play sound when computer makes a move"
-	android:defaultValue="false">
-</CheckBoxPreference>
-<EditTextPreference
-	android:key="bookFile"
-	android:title="Book Filename"
-	android:summary="Polyglot book file in DroidFish directory on SD Card"
-	android:defaultValue="">
-</EditTextPreference>
+<PreferenceCategory
+	android:title="Playing Options">
+	<ListPreference
+		android:key="gameMode"
+		android:title="Game Mode"
+		android:summary="Select opponent, analysis mode or computer match"
+		android:entryValues="@array/game_mode_values"
+		android:entries="@array/game_mode_texts"
+		android:defaultValue="1">
+	</ListPreference>
+	<CheckBoxPreference
+		android:key="boardFlipped"
+		android:title="Flip Board"
+		android:summary="View board from black side"
+		android:defaultValue="false">
+	</CheckBoxPreference>
+	<CheckBoxPreference
+		android:key="autoSwapSides"
+		android:title="Auto Swap Sides"
+		android:summary="Automatically swap sides when new game started. Also overrides Flip Board setting"
+		android:defaultValue="false">
+	</CheckBoxPreference>
+</PreferenceCategory>
+<PreferenceCategory
+	android:title="Time Control">
+	<ListPreference
+		android:key="movesPerSession"
+		android:title="Moves"
+		android:summary="Number of moves between time controls"
+		android:entryValues="@array/moves_per_session_values"
+		android:entries="@array/moves_per_session_texts"
+		android:defaultValue="60">
+	</ListPreference>
+	<ListPreference
+		android:key="timeControl"
+		android:title="Time"
+		android:summary="Maximum thinking time between time controls"
+		android:entryValues="@array/time_control_values"
+		android:entries="@array/time_control_texts"
+		android:defaultValue="300000">
+	</ListPreference>
+	<ListPreference
+		android:key="timeIncrement"
+		android:title="Increment"
+		android:summary="Extra thinking time for each completed move"
+		android:entryValues="@array/time_increment_values"
+		android:entries="@array/time_increment_texts"
+		android:defaultValue="0">
+	</ListPreference>
+</PreferenceCategory>
+<PreferenceCategory
+	android:title="Hints">
+	<CheckBoxPreference
+		android:key="showThinking"
+		android:title="Show Computer Thinking"
+		android:summary="Display computer algorithm information during search"
+		android:defaultValue="false">
+	</CheckBoxPreference>
+	<CheckBoxPreference
+		android:key="bookHints"
+		android:title="Show Book Hints"
+		android:summary="Display opening book move hints for human player"
+		android:defaultValue="false">
+	</CheckBoxPreference>
+	<ListPreference
+		android:key="thinkingArrows"
+		android:title="Use Arrows"
+		android:summary="Use arrows to display moves on chess board"
+		android:entryValues="@array/thinking_arrows_values"
+		android:entries="@array/thinking_arrows_texts"
+		android:defaultValue="2">
+	</ListPreference>
+</PreferenceCategory>
+<PreferenceCategory
+	android:title="Other">
+	<ListPreference
+		android:key="fontSize"
+		android:title="Text Size"
+		android:summary="Font size for move list and game information"
+		android:entryValues="@array/font_size_values"
+		android:entries="@array/font_size_texts"
+		android:defaultValue="12">
+	</ListPreference>
+	<CheckBoxPreference
+		android:key="soundEnabled"
+		android:title="Enable Sounds"
+		android:summary="Play sound when computer makes a move"
+		android:defaultValue="false">
+	</CheckBoxPreference>
+	<EditTextPreference
+		android:key="bookFile"
+		android:title="Book Filename"
+		android:summary="Polyglot book file in DroidFish directory on SD Card"
+		android:defaultValue="">
+	</EditTextPreference>
+</PreferenceCategory>
 </PreferenceScreen>
