DroidFish: Implemented support for "One Touch Moves". When enabled, touching a square that corresponds to exactly one legal move will immediately make that move.

--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -98,6 +98,12 @@
 			android:summary="Play sound when computer makes a move"
 			android:defaultValue="false">
 		</CheckBoxPreference>
+		<CheckBoxPreference
+			android:key="oneTouchMoves"
+			android:title="One Touch Moves"
+			android:summary="Touching a square that corresponds to one unique move makes that move immediately"
+			android:defaultValue="false">
+		</CheckBoxPreference>
 	</PreferenceCategory>
 	<PreferenceCategory
 		android:title="Other">
