--- a/DroidFish/res/layout/edit_headers.xml
+++ b/DroidFish/res/layout/edit_headers.xml
@@ -3,11 +3,13 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">	
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+	android:layout_height="wrap_content">
+	
+	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:stretchColumns="1">
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -21,12 +23,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
-
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    </TableRow>
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -40,12 +38,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
-
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    </TableRow>
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -59,12 +53,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
-
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    </TableRow>
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -78,12 +68,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
-
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    </TableRow>
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -97,12 +83,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
-
-	<LinearLayout
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    </TableRow>
+    <TableRow>
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -116,7 +98,8 @@
 			android:layout_weight="1"
 			android:inputType="text">
 		</EditText>
-	</LinearLayout>
+    </TableRow>
+	</TableLayout>
 
 	<LinearLayout
 	    android:orientation="horizontal"
