--- a/DroidFish/res/layout-land/main.xml
+++ b/DroidFish/res/layout-land/main.xml
@@ -14,6 +14,32 @@
     	android:orientation="vertical"
 	    android:layout_width="fill_parent"
     	android:layout_height="fill_parent">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+	    android:layout_height="wrap_content">
+		<ImageButton
+            android:id="@+id/modeButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onModeButtonClicked"
+            android:src="@drawable/mode">
+        </ImageButton>
+		<ImageButton
+            android:id="@+id/undoButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onUndoButtonClicked"
+            android:src="@drawable/left_small">
+        </ImageButton>
+		<ImageButton
+            android:id="@+id/redoButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onRedoButtonClicked"
+            android:src="@drawable/right_small">
+        </ImageButton>
+	</LinearLayout>
 	<TextView
 	    android:id="@+id/status"
 	    android:layout_width="fill_parent" 
