--- a/DroidFish/res/layout/main.xml
+++ b/DroidFish/res/layout/main.xml
@@ -8,13 +8,40 @@
 	    android:id="@+id/chessboard"
     	android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"/>
-	<TextView
-    	android:id="@+id/status"
-	    android:layout_width="fill_parent" 
-    	android:layout_height="wrap_content" 
-	    android:includeFontPadding="true"
-    	android:typeface="monospace"
-	    android:textSize="10dip"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+	    android:layout_height="wrap_content">
+		<TextView
+    		android:id="@+id/status"
+	    	android:layout_width="fill_parent" 
+	    	android:layout_height="wrap_content" 
+			android:layout_weight="1"
+		    android:includeFontPadding="true"
+    		android:typeface="monospace"
+		    android:textSize="10dip"/>
+		<ImageButton
+            android:id="@+id/modeButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onModeButtonClicked"
+            android:src="@drawable/mode">
+        </ImageButton>
+		<ImageButton
+            android:id="@+id/undoButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onUndoButtonClicked"
+            android:src="@drawable/left_small">
+        </ImageButton>
+		<ImageButton
+            android:id="@+id/redoButton"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="onRedoButtonClicked"
+            android:src="@drawable/right_small">
+        </ImageButton>
+	</LinearLayout>
 	<ScrollView
 		android:id="@+id/scrollView"
 		android:layout_width="fill_parent"
