--- a/DroidFish/res/menu/options_menu.xml
+++ b/DroidFish/res/menu/options_menu.xml
@@ -7,14 +7,14 @@
   		android:icon="@drawable/start">
 	</item>
 	<item
-	  	android:id="@+id/item_undo"
-  		android:title="Undo"
-	  	android:icon="@drawable/left">
+		android:id="@+id/item_goto_move"
+		android:title="Goto Move"
+  		android:icon="@android:drawable/ic_menu_mylocation">
 	</item>
 	<item
-  		android:id="@+id/item_redo"
-	  	android:title="Redo"
-  		android:icon="@drawable/right">
+		android:id="@+id/item_resign"
+		android:title="Resign game"
+  		android:icon="@android:drawable/ic_menu_delete">
 	</item>
 	<item
   		android:id="@+id/item_editboard"
@@ -27,20 +27,12 @@
   		android:icon="@android:drawable/ic_menu_preferences">
 	</item>
 	<item
-		android:id="@+id/item_goto_move"
-		android:title="Goto Move">
-	</item>
-	<item
 		android:id="@+id/item_force_move"
 		android:title="Force Computer Move">
 	</item>
 	<item
 		android:id="@+id/item_draw"
 		android:title="Claim/Offer/Accept Draw">
-	</item>
-	<item
-		android:id="@+id/item_resign"
-		android:title="Resign game">
 	</item>
 	<item
 		android:id="@+id/select_book"
