--- a/DroidFish/res/layout/main.xml
+++ b/DroidFish/res/layout/main.xml
@@ -31,6 +31,7 @@
             android:id="@+id/undoButton"
             android:layout_width="36dp"
             android:layout_height="32dp"
+            android:longClickable="true"
             android:onClick="onUndoButtonClicked"
             android:src="@drawable/left_small">
         </ImageButton>
@@ -38,6 +39,7 @@
             android:id="@+id/redoButton"
             android:layout_width="36dp"
             android:layout_height="32dp"
+            android:longClickable="true"
             android:onClick="onRedoButtonClicked"
             android:src="@drawable/right_small">
         </ImageButton>
