--- a/DroidFish/res/layout/title.xml
+++ b/DroidFish/res/layout/title.xml
@@ -12,6 +12,7 @@
 		android:layout_alignParentLeft="true">
 	</TextView>
 	<TextView
+	    android:id="@+id/title_text"
 		android:text="@string/app_name"
 		android:textStyle="bold"
 		android:layout_width="wrap_content"
