DroidFish: Implemented function to prevent screen blanking.

--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -114,6 +114,11 @@
 			android:summary="Fullscreen mode hides the status bar"
 			android:defaultValue="false">
 		</CheckBoxPreference>
+        <CheckBoxPreference
+            android:key="wakeLock"
+            android:title="Disable Screen Timeout"
+            android:defaultValue="false">
+        </CheckBoxPreference>
 		<CheckBoxPreference
 			android:key="drawSquareLabels"
 			android:title="Square Labels"
